--- a/nextflow.config
+++ b/nextflow.config
@@ -25,4 +25,92 @@ process {
 	time = "72h"        
         clusterOptions = "--account=fionamcc --job-name=STAR"
     }
+    withName: TrinityGG {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/trinity_rsem_quantexp.sif'
+	executor = "slurm"
+	cpus = "94"
+	queue = "standard"
+	time = "150h"        
+        clusterOptions = "--account=shaneburgess --job-name=TrinityGG --constraint=hi_mem"
+    }	
+    withName: GMAPIndex {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gmap_2019-03-15.sif'
+	executor = "slurm"
+	cpus = "94"
+	mem = "0"
+	queue = "standard"
+	time = "24h"        
+        clusterOptions = "--account=fionamcc --job-name=GMAPIndex"
+    }
+    withName: GMAP {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gmap_2019-03-15.sif'
+	executor = "slurm"
+	cpus = "94"
+	mem = "0"
+	queue = "standard"
+	time = "24h"        
+        clusterOptions = "--account=fionamcc --job-name=GMAP"
+    }
+    withName: "mapped transcipts GTF to GFF" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gffread_0.11.7--h8b12597_0.sif'
+	executor = "slurm"
+	cpus = "1"
+	queue = "standard"
+	time = "2h"        
+        clusterOptions = "--account=fionamcc --job-name=GTF2GFF"
+    }
+    withName: "FEELnc_filter" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
+	executor = "slurm"
+	cpus = "30"
+	mem = "0"
+	queue = "standard"
+	time = "24h"        
+        clusterOptions = "--account=fionamcc --job-name=FEELncfilter"
+    }
+    withName: "FEELnc_codpot" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
+	executor = "slurm"
+	cpus = "94"
+	mem = "0"
+	queue = "standard"
+	time = "72h"        
+        clusterOptions = "--account=fionamcc --job-name=FEELnccodpot"
+    }
+    withName: "FEELnc_class" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
+	executor = "slurm"
+	cpus = "48"
+	mem = "0"
+	queue = "standard"
+	time = "24h"        
+        clusterOptions = "--account=fionamcc --job-name=FEELncclass"
+    }
+    withName: "top targets" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
+	executor = "slurm"
+	cpus = "48"
+	mem = "0"
+	queue = "standard"
+	time = "12h"        
+        clusterOptions = "--account=fionamcc --job-name=pulltargets"
+    }
+    withName: "pull GO" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
+	executor = "slurm"
+	cpus = "48"
+	mem = "0"
+	queue = "standard"
+	time = "24h"        
+        clusterOptions = "--account=fionamcc --job-name=pullGO"
+    }
+    withName: "summary" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
+	executor = "slurm"
+	cpus = "1"
+	mem = "0"
+	queue = "standard"
+	time = "2h"        
+        clusterOptions = "--account=fionamcc --job-name=summary"
+    }
 }
