should work through GMAPIndex

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,13 +31,12 @@ process {
 	cpus = "94"
 	queue = "standard"
 	time = "150h"        
-        clusterOptions = "--account=shaneburgess --job-name=TrinityGG --constraint=hi_mem"
+        clusterOptions = "--account=shaneburgess --job-name=TrinityGG"
     }	
     withName: GMAPIndex {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gmap_2019-03-15.sif'
 	executor = "slurm"
 	cpus = "94"
-	mem = "0"
 	queue = "standard"
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=GMAPIndex"
@@ -46,7 +45,6 @@ process {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gmap_2019-03-15.sif'
 	executor = "slurm"
 	cpus = "94"
-	mem = "0"
 	queue = "standard"
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=GMAP"
