--- a/nextflow.config
+++ b/nextflow.config
@@ -44,12 +44,12 @@ process {
     withName: GMAP {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gmap_2019-03-15.sif'
 	executor = "slurm"
-	cpus = "94"
+	cpus = "48"
 	queue = "standard"
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=GMAP"
     }
-    withName: "mapped transcipts GTF to GFF" {
+    withName: "mapped transcripts GFF to GTF" {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gffread_0.11.7--h8b12597_0.sif'
 	executor = "slurm"
 	cpus = "1"
@@ -61,7 +61,6 @@ process {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
 	executor = "slurm"
 	cpus = "30"
-	mem = "0"
 	queue = "standard"
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=FEELncfilter"
@@ -70,7 +69,6 @@ process {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
 	executor = "slurm"
 	cpus = "94"
-	mem = "0"
 	queue = "standard"
 	time = "72h"        
         clusterOptions = "--account=fionamcc --job-name=FEELnccodpot"
@@ -79,16 +77,22 @@ process {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
 	executor = "slurm"
 	cpus = "48"
-	mem = "0"
 	queue = "standard"
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=FEELncclass"
+    }
+    withName: "gffcompare" {
+	container = 'file:///xdisk/shaneburgess/amcooksey/usda_ncrna_annotation/tools/gffcompare_0.12.6.sif'
+	executor = "slurm"
+	cpus = 24
+	queue = "standard"
+	time = "12h"
+	clusterOptions = "--account=fionamcc --job-name=merge"
     }
     withName: "top targets" {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
 	executor = "slurm"
 	cpus = "48"
-	mem = "0"
 	queue = "standard"
 	time = "12h"        
         clusterOptions = "--account=fionamcc --job-name=pulltargets"
@@ -97,7 +101,6 @@ process {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
 	executor = "slurm"
 	cpus = "48"
-	mem = "0"
 	queue = "standard"
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=pullGO"
@@ -106,7 +109,6 @@ process {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
 	executor = "slurm"
 	cpus = "1"
-	mem = "0"
 	queue = "standard"
 	time = "2h"        
         clusterOptions = "--account=fionamcc --job-name=summary"
