should work through feelnc_classifier

--- a/nextflow.config
+++ b/nextflow.config
@@ -74,7 +74,7 @@ process {
 	time = "72h"        
         clusterOptions = "--account=fionamcc --job-name=FEELnccodpot"
     }
-    withName: "FEELnc_class" {
+    withName: "FEELnc_classifier" {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/feelnc_0.1.1--pl526_5.sif'
 	executor = "slurm"
 	cpus = "48"
