should work through gtf2fa_mrna

--- a/nextflow.config
+++ b/nextflow.config
@@ -90,6 +90,22 @@ process {
 	time = "12h"
 	clusterOptions = "--account=fionamcc --job-name=merge"
     }
+    withName: "gtf2fa_lnc" {
+	container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gffread_0.11.7--h8b12597_0.sif'
+	executor = "slurm"
+	cpus = 24
+	queue = "standard"
+	time = "12h"
+	clusterOptions = "--account=fionamcc --job-name=lncrnafa"
+    }
+    withName: "gtf2fa_mrna" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/gffread_0.11.7--h8b12597_0.sif'
+        executor = "slurm"
+        cpus = 24
+        queue =	"standard"
+        time = "12h"
+        clusterOptions = "--account=fionamcc --job-name=mrnafa"
+    }
     withName: "top targets" {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
 	executor = "slurm"
