works with multiple samples through gtfmerge

--- a/nextflow.config
+++ b/nextflow.config
@@ -82,7 +82,7 @@ process {
 	time = "24h"        
         clusterOptions = "--account=fionamcc --job-name=FEELncclass"
     }
-    withName: "gffcompare" {
+    withName: "gtfmerge" {
 	container = 'file:///xdisk/shaneburgess/amcooksey/usda_ncrna_annotation/tools/gffcompare_0.12.6.sif'
 	executor = "slurm"
 	cpus = 24
