should work through unilnc mapping

--- a/nextflow.config
+++ b/nextflow.config
@@ -106,8 +106,16 @@ process {
         time = "12h"
         clusterOptions = "--account=fionamcc --job-name=mrnafa"
     }
+    withName: "UNILNCmapping" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
+        executor = "slurm"
+        cpus = "48"
+        queue = "standard"
+        time = "12h"
+        clusterOptions = "--account=fionamcc --job-name=UNImap"
+    }
     withName: "top targets" {
-        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
 	executor = "slurm"
 	cpus = "48"
 	queue = "standard"
@@ -115,7 +123,7 @@ process {
         clusterOptions = "--account=fionamcc --job-name=pulltargets"
     }
     withName: "pull GO" {
-        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
 	executor = "slurm"
 	cpus = "48"
 	queue = "standard"
@@ -123,7 +131,7 @@ process {
         clusterOptions = "--account=fionamcc --job-name=pullGO"
     }
     withName: "summary" {
-        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/TOBEDETERMINED.sif'
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
 	executor = "slurm"
 	cpus = "1"
 	queue = "standard"
