works through pull go each

--- a/nextflow.config
+++ b/nextflow.config
@@ -122,13 +122,21 @@ process {
 	time = "12h"        
         clusterOptions = "--account=fionamcc --job-name=pulltargets"
     }
-    withName: "pull GO" {
+    withName: "pull GO each" {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
 	executor = "slurm"
 	cpus = "48"
 	queue = "standard"
 	time = "24h"        
-        clusterOptions = "--account=fionamcc --job-name=pullGO"
+        clusterOptions = "--account=fionamcc --job-name=pullGOeach"
+    }
+    withName: "pull GO all" {
+        container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
+	executor = "slurm"
+	cpus = "48"
+	queue = "standard"
+	time = "24h"        
+        clusterOptions = "--account=fionamcc --job-name=pullGOall"
     }
     withName: "summary" {
         container = 'file:///xdisk/shaneburgess/amcooksey/lnc_nf_proj/project/tools/filterlncpullgo_1.0.sif'
